--- a/backend-IndoConsultant-main/.gitignore
+++ b/backend-IndoConsultant-main/.gitignore
@@ -1,1 +1,44 @@
 node_modules
+
+# Node.js dependencies
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Dependency directories
+jspm_packages/
+
+# Build outputs
+dist/
+build/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDE-specific files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Temporary files
+*.tmp
+*.swp
+*.bak
+
+# Coverage files
+coverage/
+
+# Ignore lock files for package managers (optional)
+package-lock.json
